# pgfe

./: .editorconfig  .gitattributes  .gitignore  CHANGES.md  CMakeLists.txt  Doxyfile  Doxyfile.in  LICENSE.txt  README.md  dll.hpp.in  fs.hpp  os.hpp  version.hpp.in  version.rc.in
base/: CMakeLists.txt  base.hpp  errctg.hpp
cmake/: CMakeLists.txt  DmitigrPgfeConfig.cmake  FindCommon.cmake  FindEv.cmake  FindInternal.cmake  FindPq.cmake  FindUv.cmake  Finddmitigr_common.cmake  dmitigr.cmake  dmitigr_base.cmake  dmitigr_cefeika-config.cmake  dmitigr_cefeika.cmake  dmitigr_cpplipa-config.cmake  dmitigr_cpplipa.cmake  dmitigr_cpplipa_libraries.cmake  dmitigr_cpplipa_libraries.cmake.in  dmitigr_cpplipa_libraries_all.cmake  dmitigr_fs.cmake  dmitigr_fsx.cmake  dmitigr_librarian.cmake  dmitigr_libs-config.cmake  dmitigr_libs.cmake  dmitigr_libs_package.cmake  dmitigr_libs_package.cmake.in  dmitigr_net.cmake  dmitigr_os.cmake  dmitigr_package_finder.cmake  dmitigr_pgfe.cmake  dmitigr_str.cmake  dmitigr_util.cmake  librarian.cmake
doc/: CMakeLists.txt  Doxyfile.in  dmitigr_pgfe.class.violet.html  pgfe.class.violet.html
fs/: fs.hpp
lib/: CMakeLists.txt
lib/dmitigr/: CMakeLists.txt  base.hpp  dll.hpp.in  fs.cpp  fs.hpp  implementation_footer.hpp.in  implementation_header.hpp.in  lib.cpp.in  lib.hpp.in  mem.cpp  mem.hpp  misc.hpp  net.cpp  net.hpp  os.cpp  os.hpp  pgfe.cpp  pgfe.hpp  str.cpp  str.hpp  testo.hpp  util.cpp  util.hpp  version.cpp.in  version.hpp.in  version.rc.in
lib/dmitigr/base/: CMakeLists.txt  base.hpp  basics.hpp  debug.hpp  endianness.hpp  filesystem.hpp  macros.hpp  version.hpp
lib/dmitigr/fs/: CMakeLists.txt  fs.cpp  fs.hpp  types_fwd.hpp
lib/dmitigr/mem/: CMakeLists.txt  mem.hpp  types_fwd.hpp  version.hpp
lib/dmitigr/misc/: CMakeLists.txt  algo.hpp  basics.hpp  endianness.hpp  filesystem.hpp  flatcfg.hpp  fs.hpp  macros.hpp  math.hpp  mem.hpp  mp.hpp  mulf.hpp  progpar.hpp  read.hpp  reader.hpp  rng.hpp  str.hpp  testo.hpp  time.hpp  ttpl.hpp  url.hpp  uuid.hpp  version.hpp
lib/dmitigr/net/: CMakeLists.txt  address.hpp  client.hpp  conversions.hpp  descriptor.hpp  dll.hpp  endpoint.hpp  exceptions.cpp  exceptions.hpp  listener.hpp  net.cpp  net.hpp  socket.hpp  types_fwd.hpp  util.hpp  version.hpp
lib/dmitigr/os/: CMakeLists.txt  dll.hpp  env.cpp  env.hpp  exceptions.hpp  log.hpp  os.hpp  proc.cpp  proc.hpp  proc_detach.cpp  proc_detach.hpp  proc_run.hpp  types_fwd.hpp  version.hpp  windows.hpp
lib/dmitigr/pgfe/: .gitignore  CMakeLists.txt  array_conversions.hpp  array_conversions.hxx  array_conversions.tcc  basic_conversions.hpp  basics.cmake  basics.cpp  basics.hpp  basics.hpp.in  completion.cpp  completion.hpp  completion.hxx  composite.cpp  composite.hpp  composite.hxx  compositional.cpp  compositional.hpp  compositional.hxx  connection.cpp  connection.hpp  connection.hxx  connection_options.cpp  connection_options.cxx.in  connection_options.hpp  connection_options.hxx  connection_pool.cpp  connection_pool.hpp  conversions.hpp  conversions.hxx  conversions_api.hpp  data.cpp  data.hpp  data.hxx  defaults.hpp.in  defaults_unix.hpp  defaults_windows.hpp  dll.hpp  entity_vector.hpp  errc.cmake  (+69 more)
lib/dmitigr/pgfe/internal/: .gitignore  CMakeLists.txt  basics.hxx  debug.hxx  dll.hpp  dll.hpp.in  dll.hxx.in  enums.hxx  filesystem_experimental.hxx  macros.hxx  math.hxx  memory.hxx  net.cpp  net.hxx  string.cpp  string.hxx
lib/dmitigr/pgfe/internal/net/: CMakeLists.txt  inet.cpp  inet.hxx
lib/dmitigr/pgfe/internal/std/: CMakeLists.txt  cstring.hxx
lib/dmitigr/pgfe/internal/std/memory/: CMakeLists.txt  conditional_delete.hxx
lib/dmitigr/pgfe/internal/std/string/: CMakeLists.txt
lib/dmitigr/pgfe/internal/std/string/to_string/: CMakeLists.txt  numeric.hxx
lib/dmitigr/pgfe/test/: pgfe-unit-benchmark_array_client.cpp  pgfe-unit-benchmark_array_server.cpp  pgfe-unit-benchmark_sql_string_replace.cpp  pgfe-unit-connection-err_in_mid.cpp  pgfe-unit-connection-rows.cpp  pgfe-unit-connection.cpp  pgfe-unit-connection_options.cpp  pgfe-unit-conversions.cpp  pgfe-unit-conversions_online.cpp  pgfe-unit-data.cpp  pgfe-unit-entity_vector.cpp  pgfe-unit-hello_world.cpp  pgfe-unit-problem.cpp  pgfe-unit-row_info.cpp  pgfe-unit-sql_vector.cpp  pgfe-unit-sql_vector.sql  pgfe-unit.hpp
lib/dmitigr/pgfe/tests/: CMakeLists.txt  benchmark-array-client.cpp  benchmark-array-server.cpp  benchmark-array.hpp  benchmark-sql_string_replace.cpp  hello_world.cpp  unit-composite.cpp  unit-connection-deferrable.cpp  unit-connection-err_in_mid.cpp  unit-connection-ssl.cpp  unit-connection.cpp  unit-connection_options.cpp  unit-conversions-online.cpp  unit-conversions.cpp  unit-data.cpp  unit-problem.cpp  unit-ps.cpp  unit-sql_string.cpp  unit-sql_vector.cpp  unit.hpp
lib/dmitigr/str/: CMakeLists.txt  conversions.hpp  cstrings.hpp  errc.hpp  exceptions.hpp  lines.hpp  predicates.hpp  readers.hpp  std_system_error.hpp  str.cpp  str.hpp  substrings.hpp  transformators.hpp  types_fwd.hpp  version.hpp
lib/dmitigr/testo/: CMakeLists.txt  testo.hpp  version.hpp
lib/dmitigr/util/: CMakeLists.txt  algorithm.hpp  basics.hpp  config.cpp  config.hpp  console.cpp  console.hpp  debug.hpp  exceptions.cpp  exceptions.hpp  filesystem.hpp  fs.cpp  fs.hpp  io.hpp  macros.hpp  math.hpp  memory.hpp  net.cpp  net.hpp  os.cpp  os.hpp  stream.cpp  stream.hpp  string.cpp  string.hpp  test.hpp  types_fwd.hpp  windows.hpp
lib/dmitigr/util/test/: util-unit-net.cpp
os/: CMakeLists.txt  env.hpp  errctg.hpp  error.hpp  exceptions.hpp  last_error.hpp  net.hpp  os.hpp  proc.hpp  version.hpp  windows.hpp
pgfe/: basics.hpp  dll.hpp  (+23 more)
tests/: CMakeLists.txt  benchmark-array-client.cpp  benchmark-array-server.cpp  benchmark-array.hpp  benchmark-sql_string_replace.cpp  deploy.sql  hello_world.cpp  unit-composite.cpp  unit-connection-deferrable.cpp  unit-connection-err_in_mid.cpp  unit-connection-ssl.cpp  unit-connection.cpp  unit-connection_options.cpp  unit-conversions-online.cpp  unit-conversions.cpp  unit-data.cpp  unit-problem.cpp  unit-ps.cpp  unit-sql_string.cpp  unit-sql_vector.cpp  unit.hpp
(+287 files in other folders)
